@@ -1,4 +1,8 @@
 v0.07.2
+* Added experimental Ant build file
+* Removed hard coded sRGB curve
+* Fixes to bucket renderer anti-aliasing
+* Camera motion blur
 * Added bezier patch meshes to parser
 * Added normal smoothing to FileMesh
 * Implemented BVH2 case properly in BoundingIntervalHierarchy (needs benchmarking)
